@@ -110,13 +110,13 @@ public class FederatedNodePersistence implements NodePersistence {
     }
 
     @Override
-    public List<ElementJson> findAllByNodeType(String projectId, String refId, String commitId, int nodeType) {
+    public List<ElementJson> findAllByNodeType(String projectId, String refId, String commitId, int nodeType, Boolean deleted) {
         ContextHolder.setContext(projectId, refId);
         List<Node> nodes;
         if (commitId != null) {
             nodes = nodeDAO.findAllByNodeType(nodeType);
         } else {
-            nodes = nodeDAO.findAllByDeletedAndNodeType(false, nodeType);
+            nodes = nodeDAO.findAllByDeletedAndNodeType(deleted, nodeType);
         }
         return new ArrayList<>(getNodeGetDomain().processGetJsonFromNodes(nodes, commitId).getActiveElementMap().values());
     }
@@ -129,26 +129,26 @@ public class FederatedNodePersistence implements NodePersistence {
     }
 
     @Override
-    public List<ElementJson> findAll(String projectId, String refId, String commitId) {
+    public List<ElementJson> findAll(String projectId, String refId, String commitId, Boolean deleted) {
         ContextHolder.setContext(projectId, refId);
         List<Node> nodes;
         if (commitId != null) {
             nodes = nodeDAO.findAll();
         } else {
-            nodes = nodeDAO.findAllByDeleted(false);
+            nodes = nodeDAO.findAllByDeleted(deleted);
         }
         return new ArrayList<>(getNodeGetDomain().processGetJsonFromNodes(nodes, commitId).getActiveElementMap().values());
     }
 
 
     @Override
-    public void streamAllAtCommit(String projectId, String refId, String commitId, OutputStream stream, String separator) {
+    public void streamAllAtCommit(String projectId, String refId, String commitId, OutputStream stream, String separator, Boolean deleted) {
         ContextHolder.setContext(projectId, refId);
         List<Node> nodes;
         if (commitId != null) {
             nodes = nodeDAO.findAll();
         } else {
-            nodes = nodeDAO.findAllByDeleted(false);
+            nodes = nodeDAO.findAllByDeleted(deleted);
         }
         AtomicInteger counter = new AtomicInteger();
         batches(nodes, streamLimit).forEach(ns -> {
@@ -191,7 +191,7 @@ public class FederatedNodePersistence implements NodePersistence {
                         node.setDeleted(true);
                     }
                 }
-                nodeDAO.saveAll(info.getExistingNodeMap().values().stream().toList());
+                nodeDAO.saveAll(info.getExistingNodeMap().values().stream().collect(Collectors.toList()));
 
             } else {
                 for (Node n : nodeDAO.findAllByDeleted(false)) {
